# prospect-engine

./: .env.example  .gitignore  .prettierrc  AGENTS.md  Cargo.toml  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.cursor/: mcp.json
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/migrations/: 001_users.sql  002_refresh_tokens.sql  003_leads.sql  004_email_events.sql  005_leads_geo.sql  006_durable_jobs.sql  007_email_tracking.sql  008_smtp_settings.sql
apps/api/src/: config.rs  db_url.rs  errors.rs  extractors.rs  lib.rs  main.rs  models.rs  router.rs  state.rs
apps/api/src/handlers/: audit.rs  auth.rs  discovery.rs  email.rs  email_track.rs  health.rs  jobs.rs  leads.rs  map.rs  mod.rs  pipeline.rs  reports.rs  settings_smtp.rs  ws.rs
apps/api/src/middleware/: layers.rs  mod.rs
apps/api/src/services/: auth.rs  headless.rs  mod.rs  rate_limit.rs  smtp_crypto.rs  smtp_settings.rs  worker.rs
apps/api/tests/: auth_http.rs  phase3_http.rs  post_mvp_http.rs
apps/desktop/: package.json
apps/desktop/src-tauri/: tauri.conf.json
apps/web/: AGENTS.md  package.json  tsconfig.json  vite.config.ts
apps/web/src/: app.css  app.d.ts  hooks.server.ts
apps/web/src/lib/actions/: clickOutside.ts  focusTrap.ts  keyboard.ts  resizable.ts  virtualScroll.ts
apps/web/src/lib/auth/: token.ts
apps/web/src/lib/constants/: api.ts  keyboard.ts  layout.ts  navigation.ts  theme.ts
apps/web/src/lib/handlers/: appShellKeydown.ts
apps/web/src/lib/services/: api.ts
apps/web/src/lib/stores/: app.svelte.ts  audit.svelte.ts  customTheme.svelte.ts  discovery.svelte.ts  keyboard.svelte.ts  layout.svelte.ts  map.svelte.ts  pipeline.svelte.ts  theme.svelte.ts  websocket.svelte.ts
apps/web/src/lib/theme/: cssVarColor.ts  customColorTokens.ts
apps/web/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
crates/crawler/: Cargo.toml
crates/crawler/src/: http.rs  lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  models.rs  traits.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs  types.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs
crates/scorer/: Cargo.toml
crates/scorer/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  id.rs  lib.rs
docs/: PLAN.md  SECURITY.md
services/ml/: pyproject.toml  requirements.txt
services/ml/src/: __init__.py  contracts.py  server.py  worker.py
(+61 files in other folders)
