[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
default-run = "api"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
queue = { path = "../../crates/queue" }
crawler = { path = "../../crates/crawler" }
scorer = { path = "../../crates/scorer" }
lettre = { version = "0.11", default-features = false, features = [
	"smtp-transport",
	"builder",
	"native-tls",
] }
argon2 = "0.5"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
email_address = "0.2"
hex = "0.4"
jsonwebtoken = "9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
printpdf = "0.7"
